// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomHeaderSection generateCustomHeaderSection positions Test 'position' property. Create with anchor - 1.85 ui5 1`] = `
Object {
  "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
  "position": Object {
    "anchor": "Dummy",
    "placement": "Before",
  },
  "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
  "templateEdit": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSectionEdit",
  "title": "New Custom Header Section",
  "type": "XMLFragment",
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection positions Test 'position' property. Create with anchor - latest ui5 1`] = `
Object {
  "position": Object {
    "anchor": "Dummy",
    "placement": "Before",
  },
  "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
  "templateEdit": ".NewCustomHeaderSectionEdit",
  "title": "New Custom Header Section",
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection positions Test 'position' property. Create without anchor - 1.85 ui5 1`] = `
Object {
  "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
  "position": Object {
    "anchor": "Dummy",
    "placement": "Before",
  },
  "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
  "templateEdit": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSectionEdit",
  "title": "New Custom Header Section",
  "type": "XMLFragment",
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection positions Test 'position' property. Create without anchor - latest ui5 1`] = `
Object {
  "position": Object {
    "anchor": "Dummy",
    "placement": "Before",
  },
  "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
  "templateEdit": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSectionEdit",
  "title": "New Custom Header Section",
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection positions Test 'position' property. Create without position - 1.85 ui5 1`] = `
Object {
  "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
  "position": Object {
    "anchor": "Dummy",
    "placement": "Before",
  },
  "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
  "templateEdit": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSectionEdit",
  "title": "New Custom Header Section",
  "type": "XMLFragment",
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection positions Test 'position' property. Create without position - latest ui5 1`] = `
Object {
  "position": Object {
    "anchor": "Dummy",
    "placement": "Before",
  },
  "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
  "templateEdit": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSectionEdit",
  "title": "New Custom Header Section",
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.85 1`] = `
Object {
  "body": Object {
    "sections": Object {},
  },
  "header": Object {
    "facets": Object {
      "NewCustomHeaderSection": Object {
        "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
        "title": "New Custom Header Section",
        "type": "XMLFragment",
      },
    },
  },
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.85 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomHeaderSection'}\\" text=\\"NewCustomHeaderSection\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.85 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.85 4`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/different/NewCustomHeaderSectionEdit'}\\" text=\\"NewCustomHeaderSectionEdit\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.85 5`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.86 1`] = `
Object {
  "body": Object {
    "sections": Object {},
  },
  "header": Object {
    "facets": Object {
      "NewCustomHeaderSection": Object {
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
        "templateEdit": ".NewCustomHeaderSectionEdit",
        "title": "New Custom Header Section",
      },
    },
  },
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.86 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomHeaderSection'}\\" text=\\"NewCustomHeaderSection\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.86 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.86 4`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/different/NewCustomHeaderSectionEdit'}\\" text=\\"NewCustomHeaderSectionEdit\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.86 5`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.98 1`] = `
Object {
  "body": Object {
    "sections": Object {},
  },
  "header": Object {
    "facets": Object {
      "NewCustomHeaderSection": Object {
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
        "templateEdit": ".NewCustomHeaderSectionEdit",
        "title": "New Custom Header Section",
      },
    },
  },
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.98 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomHeaderSection'}\\" text=\\"NewCustomHeaderSection\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.98 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.98 4`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/different/NewCustomHeaderSectionEdit'}\\" text=\\"NewCustomHeaderSectionEdit\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in different extension folders for version 1.98 5`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.85 1`] = `
Object {
  "body": Object {
    "sections": Object {},
  },
  "header": Object {
    "facets": Object {
      "NewCustomHeaderSection": Object {
        "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
        "title": "New Custom Header Section",
        "type": "XMLFragment",
      },
    },
  },
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.85 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomHeaderSection'}\\" text=\\"NewCustomHeaderSection\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.85 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.85 4`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomHeaderSectionEdit'}\\" text=\\"NewCustomHeaderSectionEdit\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.85 5`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.86 1`] = `
Object {
  "body": Object {
    "sections": Object {},
  },
  "header": Object {
    "facets": Object {
      "NewCustomHeaderSection": Object {
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
        "templateEdit": ".NewCustomHeaderSectionEdit",
        "title": "New Custom Header Section",
      },
    },
  },
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.86 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomHeaderSection'}\\" text=\\"NewCustomHeaderSection\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.86 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.86 4`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomHeaderSectionEdit'}\\" text=\\"NewCustomHeaderSectionEdit\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.86 5`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.98 1`] = `
Object {
  "body": Object {
    "sections": Object {},
  },
  "header": Object {
    "facets": Object {
      "NewCustomHeaderSection": Object {
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomHeaderSection",
        "templateEdit": ".NewCustomHeaderSectionEdit",
        "title": "New Custom Header Section",
      },
    },
  },
}
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.98 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\" xmlns:macros=\\"sap.fe.macros\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomHeaderSection'}\\" text=\\"NewCustomHeaderSection\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.98 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.98 4`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<VBox>
		<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomHeaderSectionEdit'}\\" text=\\"NewCustomHeaderSectionEdit\\" press=\\"handler.onPress\\" />
	</VBox>
</core:FragmentDefinition>"
`;

exports[`CustomHeaderSection generateCustomHeaderSection read only and edit fragments in same extension folder for version 1.98 5`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function(oEvent) {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;
